tests/algorithms/x/C/web_programming/nasa_data.c
// Generated by Mochi 0.10.32 on 2025-08-24 09:44 +0700
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include <unistd.h>
#include <malloc.h>


size_t append_len;
#include <time.h>
static int seeded_now = 0;
static long long now_seed = 0;
static long long _now(void) {
    if (!seeded_now) {
        const char *s = getenv("MOCHI_NOW_SEED");
        if (s && *s) {
            now_seed = atoll(s);
            seeded_now = 1;
        }
    }
    if (seeded_now) {
        now_seed = (now_seed * 1664525 + 1013904223) % 2147483647;
        return now_seed;
    }
    struct timespec ts;
    clock_gettime(CLOCK_REALTIME, &ts);
    return (long long)(ts.tv_sec * 1000000000LL + ts.tv_nsec);
}

static long long _mem(void) {
    long long size = 0, rss = 0;
    FILE *f = fopen("/proc/self/statm", "r");
    if (f) {
        if (fscanf(f, "%lld %lld", &size, &rss) != 2) rss = 0;
        fclose(f);
    }
    return rss * (long long)sysconf(_SC_PAGESIZE);
}

static void panic(const char *msg) {
    fputs(msg, stderr);
    fputc('\n', stderr);
    exit(1);
}

typedef struct ApodData ApodData;
typedef struct ArchiveCollection ArchiveCollection;
typedef struct ArchiveItem ArchiveItem;
typedef struct ArchiveItemData ArchiveItemData;
typedef struct ArchiveResult ArchiveResult;

struct ApodData {
    const char* url;
    const char* title;
};

struct ArchiveCollection {
    ArchiveItem *items;
    size_t items_len;
};

struct ArchiveItem {
    ArchiveItemData *data;
    size_t data_len;
};

struct ArchiveItemData {
    const char* description;
};

struct ArchiveResult {
    ArchiveCollection collection;
};

ApodData get_apod_data(const char* api_key);
ApodData save_apod(const char* api_key);
ArchiveResult get_archive_data(const char* query);
void user_main();
int main(void);

ApodData get_apod_data(const char* api_key) {
    ApodData data;
    return data;
}

ApodData save_apod(const char* api_key) {
    ApodData apod = get_apod_data(api_key);
    return apod;
}

ArchiveResult get_archive_data(const char* query) {
    ArchiveResult data;
    return data;
}

void user_main() {
    ApodData apod = save_apod("DEMO_KEY");
    puts(apod.title);
    ArchiveResult archive = get_archive_data("apollo 2011");
    ArchiveItem *items = archive.collection.items;
    size_t items_len = archive.collection.items_len;
    long long first_item = first(items);
    long long first_data = first(first_item.data);
    printf("%d\n", first_data.description);
}

int main(void) {
    {
        long long __start = _now();
        user_main();
        long long __end = _now();
        long long __dur_us = (__end - __start) / 1000;
        long long __mem_bytes = _mem();
        printf("{\n  \"duration_us\": %-lld,\n  \"memory_bytes\": %-lld,\n  \"name\": \"main\"\n}\n", __dur_us, __mem_bytes);
    }
    return 0;
}
